@@ -22,7 +22,7 @@ $(libunixobj)/%.o: %.c
 	$(CROSS_CC) $(CROSS_CFLAGS) -o $@ -c $< $(INCLUDES) $(CFL)
 
 $(libunixobj)/%.o: %.s
-	$(CROSS_CC) $(CROSS_CFLAGS) -o $@ -c $< $(CFL) $(CFL1)
+	$(CROSS_CC) $(CROSS_CFLAGS) -Wa,-pedantic -o $@ -c $< $(CFL) $(CFL1)
 
 COMPLEX = $(libunixobj)/complex/cabs.o \
 	$(libunixobj)/complex/cacos.o \
