@@ -1,3 +1,8 @@
+Mon Apr  7 21:09:46 2003  Alex Waugh  <alex@alexwaugh.com>
+
+	* Makefile: Add -pedantic to assembly rule.
+	* common/_riscosify.s: Add missing END directive.
+
 Sun Apr  6 22:48:08 2003  John Tytgat <John.Tytgat@aaug.net>
 
 	* unix/dirent.c: Norcroft C breaks on an int64 switch argument
